--- a/index.html
+++ b/index.html
@@ -24,104 +24,148 @@
     }
     #shadowBox {
       aspect-ratio: 1/1;
+      transition: all 0.3s ease;
+    }
+    .label-sm {
+      font-size: 0.7rem;
+      color: #4B5563;
+      text-align: center;
+    }
+    .collapse-content {
+      overflow: hidden;
+      transition: max-height 0.4s ease, opacity 0.4s ease;
+    }
+    .collapsed {
+      max-height: 0;
+      opacity: 0;
+      overflow: hidden;
+    }
+    .expanded {
+      max-height: 1000px;
+      opacity: 1;
+    }
+    .arrow {
+      transition: transform 0.3s ease;
+    }
+    .rotate-180 {
+      transform: rotate(180deg);
     }
   </style>
 </head>
-<body class="font-sans flex flex-col justify-center items-center min-h-screen m-0 p-4 transition-colors duration-300">
-  <div class="max-w-md w-full space-y-6">
-    <!-- Website name -->
-    <div class="text-center">
-      <h1 class="text-4xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-600 mb-1">Beautiful Shadows UI</h1>
-      <p class="text-gray-600 text-sm">Customize your beautiful shadow box</p>
+<body class="flex flex-col min-h-screen transition-colors duration-300">
+  
+  <!-- Main content: shadow box centered -->
+  <div class="flex-grow flex justify-center items-center">
+    <div id="shadowBox" class="w-56 bg-pink-400 rounded-lg shadow-[10px_10px_30px_rgba(255,143,171,0.4)]"></div>
+  </div>
+
+  <!-- Controls panel at bottom, centered -->
+<div class="max-w-md w-full mx-auto bg-white p-2 rounded-xl shadow-md space-y-2 mb-4">
+    <!-- Title inside box -->
+    <div class="text-center mb-1">
+      <h1 class="text-xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-pink-500 to-purple-600">
+        Beautiful Shadows UI
+      </h1>
+      <p class="text-gray-600 text-xs">Customize your shadow & background</p>
     </div>
 
-    <!-- The shadowed box -->
-    <div id="shadowBox" class="w-64 bg-pink-400 rounded-lg shadow-[10px_10px_30px_rgba(255,143,171,0.4)] transition-all duration-300 mx-auto"></div>
-
-    <!-- Controls box -->
-    <div class="bg-white p-4 rounded-xl shadow-md space-y-4">
-      <!-- Box Controls -->
-      <div>
-        <h2 class="text-base font-semibold text-gray-700 mb-2 flex items-center gap-2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-pink-500" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z" clip-rule="evenodd" />
-          </svg>
-          Box Controls
-        </h2>
-        <div class="space-y-3">
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Box Color</span>
-            <div class="relative w-10 h-10">
-              <div id="boxColorBtn" class="w-full h-full rounded-lg bg-pink-400 border border-gray-200 control-btn shadow-sm"></div>
-              <input type="color" id="boxColorPicker" value="#ff8fab" />
-            </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Shadow Color</span>
-            <div class="relative w-10 h-10">
-              <div id="shadowColorBtn" class="w-full h-full rounded-lg bg-pink-300 border border-gray-200 control-btn shadow-sm"></div>
-              <input type="color" id="shadowColorPicker" value="#ff8fab" />
-            </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Shadow Density</span>
-            <input type="range" id="shadowDensity" min="0" max="1" step="0.1" value="0.4" class="w-24 accent-pink-500" />
-          </div>
+    <!-- Box & Shadow Header -->
+    <div class="flex justify-between items-center cursor-pointer py-1" id="boxShadowHeader">
+      <div class="flex items-center gap-1 text-sm font-semibold text-gray-700">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-pink-500" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M4 2a2 2 0 00-2 2v11a3 3 0 106 0V4a2 2 0 00-2-2H4zm1 14a1 1 0 100-2 1 1 0 000 2zm5-1.757l4.9-4.9a2 2 0 000-2.828L13.485 5.1a2 2 0 00-2.828 0L10 5.757v8.486zM16 18H9.071l6-6H16a2 2 0 012 2v2a2 2 0 01-2 2z" clip-rule="evenodd" />
+        </svg>
+        Box & Shadow
+      </div>
+      <svg class="arrow h-3 w-3 text-gray-500 rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+      </svg>
+    </div>
+    <div id="boxShadowContent" class="collapse-content expanded grid grid-cols-2 gap-2">
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Box</span>
+        <div class="relative w-7 h-7">
+          <div id="boxColorBtn" class="w-full h-full rounded bg-pink-400 border control-btn"></div>
+          <input type="color" id="boxColorPicker" value="#ff8fab" />
         </div>
       </div>
-
-      <!-- Background Controls -->
-      <div>
-        <h2 class="text-base font-semibold text-gray-700 mb-2 flex items-center gap-2">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-purple-500" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z" clip-rule="evenodd" />
-          </svg>
-          Background Controls
-        </h2>
-        <div class="space-y-3">
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Solid Color</span>
-            <div class="relative w-10 h-10">
-              <div id="bgColorBtn" class="w-full h-full rounded-full bg-pink-100 border border-gray-200 control-btn shadow-sm"></div>
-              <input type="color" id="bgColorPicker" value="#f5f6ff" />
-            </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Gradient Colors</span>
-            <div class="flex gap-2">
-              <div class="relative w-8 h-8">
-                <div id="gradientColor1Btn" class="w-full h-full rounded-full bg-pink-200 border border-gray-200 control-btn"></div>
-                <input type="color" id="gradientColor1Picker" value="#fce4ec" />
-              </div>
-              <div class="relative w-8 h-8">
-                <div id="gradientColor2Btn" class="w-full h-full rounded-full bg-purple-200 border border-gray-200 control-btn"></div>
-                <input type="color" id="gradientColor2Picker" value="#f3e5ff" />
-              </div>
-            </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <span class="text-sm text-gray-600">Background Type</span>
-            <div class="flex gap-2">
-              <button id="solidBgBtn" class="px-3 py-1 text-xs bg-pink-500 text-white rounded-full">Solid</button>
-              <button id="gradientBgBtn" class="px-3 py-1 text-xs bg-pink-500 text-white rounded-full">Gradient</button>
-            </div>
-          </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Shadow</span>
+        <div class="relative w-7 h-7">
+          <div id="shadowColorBtn" class="w-full h-full rounded bg-pink-300 border control-btn"></div>
+          <input type="color" id="shadowColorPicker" value="#ff8fab" />
         </div>
       </div>
-
-      <!-- Reset Button (now inside box) -->
-      <div class="pt-2 flex justify-center">
-        <button id="resetBtn" class="text-sm bg-gradient-to-r from-pink-500 to-purple-500 text-white px-5 py-1.5 rounded-full cursor-pointer font-semibold shadow hover:shadow-md hover:-translate-y-0.5 transition-all flex items-center gap-1">
-          <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" viewBox="0 0 20 20" fill="currentColor">
-            <path fill-rule="evenodd" d="M4 2a1 1 0 011 1v2.101a7.002 7.002 0 0111.601 2.566 1 1 0 11-1.885.666A5.002 5.002 0 005.999 7H9a1 1 0 010 2H4a1 1 0 01-1-1V3a1 1 0 011-1zm.008 9.057a1 1 0 011.276.61A5.002 5.002 0 0014.001 13H11a1 1 0 110-2h5a1 1 0 011 1v5a1 1 0 11-2 0v-2.101a7.002 7.002 0 01-11.601-2.566 1 1 0 01.61-1.276z" clip-rule="evenodd" />
-          </svg>
-          Reset
-        </button>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Density</span>
+        <input type="range" id="shadowDensity" min="0" max="1" step="0.1" value="0.4" class="w-18 accent-pink-500" />
       </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">X</span>
+        <input type="range" id="shadowOffsetX" min="-50" max="50" value="10" class="w-18 accent-pink-500" />
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Y</span>
+        <input type="range" id="shadowOffsetY" min="-50" max="50" value="10" class="w-18 accent-pink-500" />
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Blur</span>
+        <input type="range" id="shadowBlur" min="0" max="100" value="30" class="w-18 accent-pink-500" />
+      </div>
+    </div>
+
+    <!-- Background Header -->
+    <div class="flex justify-between items-center cursor-pointer py-1" id="backgroundHeader">
+      <div class="flex items-center gap-1 text-sm font-semibold text-gray-700">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 text-purple-500" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M4 3a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V5a2 2 0 00-2-2H4zm12 12H4l4-8 3 6 2-4 3 6z" clip-rule="evenodd" />
+        </svg>
+        Background
+      </div>
+      <svg class="arrow h-3 w-3 text-gray-500 rotate-180" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+      </svg>
+    </div>
+    <div id="backgroundContent" class="collapse-content expanded grid grid-cols-2 gap-2">
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Solid</span>
+        <div class="relative w-7 h-7">
+          <div id="bgColorBtn" class="w-full h-full rounded-full bg-pink-100 border control-btn"></div>
+          <input type="color" id="bgColorPicker" value="#f5f6ff" />
+        </div>
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Grad 1</span>
+        <div class="relative w-7 h-7">
+          <div id="gradientColor1Btn" class="w-full h-full rounded-full bg-pink-200 border control-btn"></div>
+          <input type="color" id="gradientColor1Picker" value="#fce4ec" />
+        </div>
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Angle</span>
+        <input type="range" id="gradientAngle" min="0" max="360" value="135" class="w-18 accent-pink-500" />
+      </div>
+      <div class="flex flex-col items-center">
+        <span class="label-sm">Grad 2</span>
+        <div class="relative w-7 h-7">
+          <div id="gradientColor2Btn" class="w-full h-full rounded-full bg-purple-200 border control-btn"></div>
+          <input type="color" id="gradientColor2Picker" value="#f3e5ff" />
+        </div>
+      </div>
+      <div class="col-span-2 flex justify-center gap-1">
+        <button id="solidBgBtn" class="px-2 py-0.5 text-xs bg-pink-500 text-white rounded-full">Solid</button>
+        <button id="gradientBgBtn" class="px-2 py-0.5 text-xs bg-pink-500 text-white rounded-full">Gradient</button>
+      </div>
+    </div>
+
+    <!-- Action Buttons -->
+    <div class="flex justify-center gap-1 pt-1">
+      <button id="copyCssBtn" class="text-xs bg-gradient-to-r from-green-500 to-emerald-500 text-white px-2 py-0.5 rounded-full font-semibold shadow hover:shadow-md transition-all">
+        Copy CSS
+      </button>
+      <button id="resetBtn" class="text-xs bg-gradient-to-r from-pink-500 to-purple-500 text-white px-2 py-0.5 rounded-full font-semibold shadow hover:shadow-md transition-all">
+        Reset
+      </button>
     </div>
   </div>
 
